# signal-editor

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
docs/: rolling_rate.md
docs/in-app/: usage_textbrowser.html
src/sea_signals/: app.py  custom_types.py  type_aliases.py  ui_handler.py  utils.py
src/sea_signals/models/: data.py  filters.py  io.py  peaks.py
src/sea_signals/views/: icons_rc.py  main_window.py  main_window.ui  message_handler.py  plots.py
src/sea_signals/views/widgets/: label_slider_box.py  paramtree_filters.py
src/signal_editor/: app.py  constants.py  fileio.py  io.py  peaks.py  processing.py  signal_editor.py  type_aliases.py  ui_handler.py  utils.py
src/signal_editor/handlers/: __init__.py  config_handler.py  data_handler.py  plot_handler.py  style_handler.py  table_handler.py  ui_handler.py
src/signal_editor/handlers/helpers/: table_helper.py  table_view_helper.py
src/signal_editor/models/: __init__.py  data.py  dataframe.py  filters.py  io.py  peaks.py  point.py  polars_df.py  processing.py  result.py  section.py  section_list.py  signal.py
src/signal_editor/views/: __init__.py  _peak_parameter_states.py  _ui_state_maps.py  custom_widgets.py  graphic_items.py  icons_rc.py  main_window.py  main_window.ui  plots.py  scatter_plot_item.py  theme_switcher.py  ui_state_maps.py  view_box.py
src/signal_editor/views/widgets/: paramtree_filters.py
tests/models/: test_result.py
