[tool.poetry]
name = "signal-editor"
version = "0.3.1"
description = ""
authors = ["Frederik Krämer <frdrkkraemer@gmail.com>"]
readme = "README.md"
packages = [{ include = "signal_editor", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyopengl-accelerate = "^3.1.7"
pyarrow = "^15.0.0"
wfdb = "^4.1.2"
polars = "^0.20.6"
neurokit2 = "^0.2.7"
pyopengl = "^3.1.7"
mne = "^1.6.1"
pywavelets = "^1.5.0"
qdarkstyle = "^3.2.3"
pyside6 = "^6.6.1"
numpy = "^1.26.3"
scipy = "^1.11.4"
xlsxwriter = "^3.1.9"
pyinstaller = "^6.3.0"
pyinstaller-hooks-contrib = "^2024.0"
python-dateutil = "^2.8.2"
qtconsole = "^5.5.1"
attrs = "^23.2.0"
tables = "^3.9.2"
numexpr = "^2.9.0"
pyqtgraph = {git = "https://github.com/pyqtgraph/pyqtgraph.git", rev = "master"}
numba = "^0.59.0"
xlsx2csv = "^0.8.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"
sourcery = "^1.15.0"
loguru = "^0.7.2"
pytest = "^8.0.0"
mypy = "^1.8.0"
ruff = "^0.2.0"
matplotlib = "^3.8.2"
black = "^24.1.1"
pygments = "^2.17.2"
better-exceptions = "^0.3.3"
pretty-errors = "^1.2.25"
python-dotenv = "^1.0.1"
hvplot = "^0.9.2"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
plugins = [
    "numpy.typing.mypy_plugin",
]

[tool.ruff]
target-version = "py312"
select = ["E", "F", "B"]
show-fixes = true
show-source = true
line-length = 100

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.lint]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportUnknownMemberType = false
